src/buildstructor/snapshots/buildstructor__buildstructor__codegen__tests__into_test.snap
---
source: src/buildstructor/codegen.rs
expression: output
---
impl Foo {
    #[must_use]
    fn builder<T: Into<String>>() -> NewFooBuilder<T> {
        __foo_new_builder::new()
    }
}
#[doc = "Autogenerated by buildstructor"]
#[allow(type_alias_bounds)]
type NewFooBuilder<T: Into<String>> =
    __foo_new_builder::__FooBuilder<(__foo_new_builder::__Required<T>,), T>;
mod __foo_new_builder {
    use super::*;
    #[inline(always)]
    #[must_use]
    pub(super) fn new<T: Into<String>>() -> __FooBuilder<(__foo_new_builder::__Required<T>,), T> {
        __FooBuilder {
            fields: (__required(),),
            _phantom: core::default::Default::default(),
        }
    }
    pub(super) struct __Required<T> {
        _uninit: std::mem::MaybeUninit<T>,
    }
    pub(super) struct __Optional<T> {
        lazy: Option<T>,
    }
    pub(super) struct __Set<T> {
        value: T,
    }
    #[inline(always)]
    fn __set<T>(value: T) -> __Set<T> {
        __Set { value }
    }
    #[inline(always)]
    fn __required<T>() -> __Required<T> {
        __Required::<T> {
            _uninit: std::mem::MaybeUninit::uninit(),
        }
    }
    #[inline(always)]
    fn __optional<T>() -> __Optional<T> {
        __Optional::<T> { lazy: None }
    }
    impl<T: Default> From<__Optional<T>> for __Set<T> {
        #[inline(always)]
        fn from(o: __Optional<T>) -> Self {
            __Set {
                value: o.lazy.unwrap_or_default(),
            }
        }
    }
    pub(super) struct __FooBuilder<__P, T> {
        fields: __P,
        _phantom: core::marker::PhantomData<(T)>,
    }
    impl<T: Into<String>> __FooBuilder<(__Required<T>,), T> {
        #[inline(always)]
        #[must_use]
        pub(super) fn simple(self, simple: T) -> __FooBuilder<(__Set<T>,), T> {
            let simple = simple;
            __FooBuilder {
                fields: (__set(simple),),
                _phantom: core::default::Default::default(),
            }
        }
    }
    impl<T: Into<String>, __P0: Into<__Set<T>>> __FooBuilder<(__P0,), T> {
        #[inline(always)]
        pub(super) fn build(self) -> Foo {
            Foo::new(self.fields.0.into().value)
        }
    }
}
