src/buildstructor/snapshots/buildstructor__buildstructor__codegen__tests__into_where_test.snap
---
source: src/buildstructor/codegen.rs
expression: output
---
impl Foo {
    fn builder<T>() -> NewFooBuilder<T> {
        __foo_new_builder::new()
    }
}
///Autogenerated by buildstructor
type NewFooBuilder<T> = __foo_new_builder::__FooBuilder<
    (__foo_new_builder::__Required<T>,),
    T,
>;
mod __foo_new_builder {
    use super::*;
    #[inline(always)]
    pub(super) fn new<T>() -> __FooBuilder<(__foo_new_builder::__Required<T>,), T> {
        __FooBuilder {
            fields: (__required(),),
            _phantom: core::default::Default::default(),
        }
    }
    pub(super) struct __Required<T> {
        _phantom: std::marker::PhantomData<T>,
    }
    pub(super) struct __Optional<T> {
        lazy: Option<T>,
    }
    pub(super) struct __Set<T> {
        value: T,
    }
    #[inline(always)]
    fn __set<T>(value: T) -> __Set<T> {
        __Set { value }
    }
    #[inline(always)]
    fn __required<T>() -> __Required<T> {
        __Required::<T> {
            _phantom: core::default::Default::default(),
        }
    }
    #[inline(always)]
    fn __optional<T>() -> __Optional<T> {
        __Optional::<T> { lazy: None }
    }
    impl<T: Default> From<__Optional<T>> for __Set<T> {
        #[inline(always)]
        fn from(o: __Optional<T>) -> Self {
            __Set {
                value: o.lazy.unwrap_or_default(),
            }
        }
    }
    pub(super) struct __FooBuilder<__P, T> {
        fields: __P,
        _phantom: core::marker::PhantomData<(T)>,
    }
    impl<T> __FooBuilder<(__Required<T>,), T> {
        #[inline(always)]
        pub(super) fn simple(self, simple: T) -> __FooBuilder<(__Set<T>,), T> {
            let simple = simple;
            __FooBuilder {
                fields: (__set(simple),),
                _phantom: core::default::Default::default(),
            }
        }
    }
    impl<T, __P0: Into<__Set<T>>> __FooBuilder<(__P0,), T>
    where
        T: Into<String>,
    {
        #[inline(always)]
        pub(super) fn build(self) -> Foo {
            Foo::new(self.fields.0.into().value)
        }
    }
}

