src/buildstructor/snapshots/buildstructor__buildstructor__codegen__tests__option_test.snap
---
source: src/buildstructor/codegen.rs
expression: output
---
impl Foo {
    #[must_use]
    fn builder() -> NewFooBuilder {
        __foo_new_builder::new()
    }
}
#[doc = "Autogenerated by buildstructor"]
#[allow(type_alias_bounds)]
type NewFooBuilder =
    __foo_new_builder::__FooBuilder<(__foo_new_builder::__Optional<Option<usize>>,)>;
mod __foo_new_builder {
    use super::*;
    #[inline(always)]
    #[must_use]
    pub(super) fn new() -> __FooBuilder<(__foo_new_builder::__Optional<Option<usize>>,)> {
        __FooBuilder {
            fields: (__optional(),),
            _phantom: core::default::Default::default(),
        }
    }
    pub(super) struct __Required<T> {
        _uninit: std::mem::MaybeUninit<T>,
    }
    pub(super) struct __Optional<T> {
        lazy: Option<T>,
    }
    pub(super) struct __Set<T> {
        value: T,
    }
    #[inline(always)]
    fn __set<T>(value: T) -> __Set<T> {
        __Set { value }
    }
    #[inline(always)]
    fn __required<T>() -> __Required<T> {
        __Required::<T> {
            _uninit: std::mem::MaybeUninit::uninit(),
        }
    }
    #[inline(always)]
    fn __optional<T>() -> __Optional<T> {
        __Optional::<T> { lazy: None }
    }
    impl<T: Default> From<__Optional<T>> for __Set<T> {
        #[inline(always)]
        fn from(o: __Optional<T>) -> Self {
            __Set {
                value: o.lazy.unwrap_or_default(),
            }
        }
    }
    pub(super) struct __FooBuilder<__P> {
        fields: __P,
        _phantom: core::marker::PhantomData<()>,
    }
    impl __FooBuilder<(__Optional<Option<usize>>,)> {
        #[inline(always)]
        #[must_use]
        pub(super) fn option(self, option: usize) -> __FooBuilder<(__Set<Option<usize>>,)> {
            let option = Some(option);
            __FooBuilder {
                fields: (__set(option),),
                _phantom: core::default::Default::default(),
            }
        }
        #[inline(always)]
        #[must_use]
        pub(super) fn and_option(
            self,
            option: Option<usize>,
        ) -> __FooBuilder<(__Set<Option<usize>>,)> {
            let option = option.map(|v| v);
            __FooBuilder {
                fields: (__set(option),),
                _phantom: core::default::Default::default(),
            }
        }
    }
    impl<__P0: Into<__Set<Option<usize>>>> __FooBuilder<(__P0,)> {
        #[inline(always)]
        pub(super) fn build(self) -> Foo {
            Foo::new(self.fields.0.into().value)
        }
    }
}
