src/buildstructor/snapshots/buildstructor__buildstructor__codegen__tests__returns_self_test.snap
---
source: src/buildstructor/codegen.rs
expression: output
---
impl Foo {
    #[must_use]
    fn builder() -> NewFooBuilder {
        __foo_new_builder::new()
    }
}
#[doc = "Autogenerated by buildstructor"]
#[allow(type_alias_bounds)]
type NewFooBuilder = __foo_new_builder::__FooBuilder<(__foo_new_builder::__Required<usize>,)>;
mod __foo_new_builder {
    use super::*;
    #[inline(always)]
    #[must_use]
    pub(super) fn new() -> __FooBuilder<(__foo_new_builder::__Required<usize>,)> {
        __FooBuilder {
            fields: (__required(),),
            _phantom: core::default::Default::default(),
        }
    }
    pub(super) struct __Required<T> {
        _uninit: std::mem::MaybeUninit<T>,
    }
    pub(super) struct __Optional<T> {
        lazy: Option<T>,
    }
    pub(super) struct __Set<T> {
        value: T,
    }
    #[inline(always)]
    fn __set<T>(value: T) -> __Set<T> {
        __Set { value }
    }
    #[inline(always)]
    fn __required<T>() -> __Required<T> {
        __Required::<T> {
            _uninit: std::mem::MaybeUninit::uninit(),
        }
    }
    #[inline(always)]
    fn __optional<T>() -> __Optional<T> {
        __Optional::<T> { lazy: None }
    }
    impl<T: Default> From<__Optional<T>> for __Set<T> {
        #[inline(always)]
        fn from(o: __Optional<T>) -> Self {
            __Set {
                value: o.lazy.unwrap_or_default(),
            }
        }
    }
    pub(super) struct __FooBuilder<__P> {
        fields: __P,
        _phantom: core::marker::PhantomData<()>,
    }
    impl __FooBuilder<(__Required<usize>,)> {
        #[inline(always)]
        #[must_use]
        pub(super) fn simple(self, simple: usize) -> __FooBuilder<(__Set<usize>,)> {
            let simple = simple;
            __FooBuilder {
                fields: (__set(simple),),
                _phantom: core::default::Default::default(),
            }
        }
    }
    impl<__P0: Into<__Set<usize>>> __FooBuilder<(__P0,)> {
        #[inline(always)]
        pub(super) fn build(self) -> Foo {
            Foo::new(self.fields.0.into().value)
        }
    }
}
