src/buildstructor/snapshots/buildstructor__buildstructor__codegen__tests__self_receiver-3.snap
---
source: src/buildstructor/codegen.rs
expression: output
---
impl Client {
    fn query(self) -> CallWithReturnClientBuilder {
        __client_call_with_return_builder::new(self)
    }
}
type CallWithReturnClientBuilder = __client_call_with_return_builder::__ClientBuilder<
    (__client_call_with_return_builder::__Required<String>,),
>;
mod __client_call_with_return_builder {
    use super::*;
    #[inline(always)]
    pub(super) fn new(
        receiver: Client,
    ) -> __ClientBuilder<(__client_call_with_return_builder::__Required<String>,)> {
        __ClientBuilder {
            receiver,
            fields: (__required(),),
            _phantom: core::default::Default::default(),
        }
    }
    pub(super) struct __Required<T> {
        _phantom: std::marker::PhantomData<T>,
    }
    pub(super) struct __Optional<T> {
        lazy: Option<T>,
    }
    pub(super) struct __Set<T> {
        value: T,
    }
    #[inline(always)]
    fn __set<T>(value: T) -> __Set<T> {
        __Set { value }
    }
    #[inline(always)]
    fn __required<T>() -> __Required<T> {
        __Required::<T> {
            _phantom: core::default::Default::default(),
        }
    }
    #[inline(always)]
    fn __optional<T>() -> __Optional<T> {
        __Optional::<T> { lazy: None }
    }
    impl<T: Default> From<__Optional<T>> for __Set<T> {
        #[inline(always)]
        fn from(o: __Optional<T>) -> Self {
            __Set {
                value: o.lazy.unwrap_or_default(),
            }
        }
    }
    pub(super) struct __ClientBuilder<__P> {
        receiver: Client,
        fields: __P,
        _phantom: core::marker::PhantomData<()>,
    }
    impl __ClientBuilder<(__Required<String>,)> {
        #[inline(always)]
        pub(super) fn simple<__T: Into<String>>(
            self,
            simple: __T,
        ) -> __ClientBuilder<(__Set<String>,)> {
            let simple = simple.into();
            __ClientBuilder {
                receiver: self.receiver,
                fields: (__set(simple),),
                _phantom: core::default::Default::default(),
            }
        }
    }
    impl<__P0: Into<__Set<String>>> __ClientBuilder<(__P0,)> {
        #[inline(always)]
        pub(super) fn call(self) -> bool {
            self.receiver.call_with_return(self.fields.0.into().value)
        }
    }
}

